# automatr

./: .gitattributes  .gitignore  .gitmodules  Makefile  PLAN.md  README.md  capsule  capsule.project.toml  features  final_feature_documents  install.sh  planning  pyproject.toml  test.ps1
.github/: PULL_REQUEST_TEMPLATE.md  context.md  copilot-instructions.md
automatr/: __init__.py  __main__.py
automatr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: PHASE1_ANALYSIS.md  final_bundle_usage.md
prompts/: assumptions_template.md  audit_log_template.md  changelog_entry_template.md  chaos_results_report_template.md  exploration_template.md  intent_card_template.md  manual_test_report_template.md  registry.json  test_plan_template.md  validation_report_template.md
scripts/: dedupe_templates.py  docs_loop.py  launch.ahk  migrate_templates.py  one_time_engine_audit.sh  repo_cleanup.sh
templates/: 8020_rapid_learning_research_prompt.json  bias_callouts.json  bias_checker.json  brain_dump_organizer.json  code_review.json  code_review_with_rag_context.json  communication_coach_two_versions.json  comprehensive_bugfix_prompt_builder.json  comprehensive_feature_prompt_builder.json  context_capture.json  contextaware_troubleshooter.json  decision_framework_from_book.json  deep_analysis__decision_matrix.json  deep_research_summary.json  explain_code.json  external_implementer_feature_delivery_orchestration.json  feature_archival__feedback_phase_3.json  feature_direct_implementation_phase_2a.json  feature_discovery__planning_phase_1.json  feature_request_intake__analysis.json  think_deeply.json  (+16 more)
(+94 files in other folders)
